<resources>
    <string name="AcousticBell">Acoustic Bell</string>
    <string name="AddConcise">Add</string>
    <string name="AddEvent">Add Event</string>
    <string name="AddMultiple">Add Multiple</string>
    <string name="AddOccurrence">Add Occurrence</string>
    <string name="AddTask">Add Task</string>
    <string name="AddTaskCategory">Add Category</string>
    <string name="AddToHomeScreen">Add to Home screen</string>
    <string name="AhHaMoment">Ah Ha Moment</string>
    <string name="Alert">Alert</string>
    <string name="AllTasks">All Tasks</string>
    <string name="AquaColor">Aqua</string>
    <string name="AreYouSure">Are you sure?</string>
    <string name="BlueColor">Blue</string>
    <string name="CancelConcise">Cancel</string>
    <string name="CancelDismiss">Cancel</string>
    <string name="Categories">Categories</string>
    <string name="Chimey">Chimey</string>
    <string name="Clear">Clear</string>
    <string name="Color">Color</string>
    <string name="ColorTitle">Color</string>
    <string name="CombinedWidgetDescription">Displays two sections of information at once. This widget is configurable.</string>
    <string name="CombinedWidgetTitle">Duplex</string>
    <string name="Completed">Completed</string>
    <string name="CrystalClear">Crystal Clear</string>
    <string name="Custom">Custom</string>
    <string name="DarkColorVariation">Dark %s</string>
    <string name="Date">Date</string>
    <string name="Day">Day</string>
    <string name="DefaultAppended">(Default)</string>
    <string name="Delete">Delete</string>
    <string name="DeleteCompletedTasks">Delete Completed (%s)</string>
    <string name="DeleteCompletedTasksGeneric">Delete Completed</string>
    <string name="DeleteOccurrences">Delete Occurrences</string>
    <string name="DiscardChanges">Discard changes</string>
    <string name="DoneConcise">Done</string>
    <string name="DueAt">Due at</string>
    <string name="DueDate">Due Date</string>
    <string name="EditAll">Edit All</string>
    <string name="EditAllOccurrences">Edit All Occurrences</string>
    <string name="EditConcise">Edit</string>
    <string name="EditMultiple">Edit Multiple</string>
    <string name="EditOccurrence">Edit Occurrence</string>
    <string name="Editing">Editing</string>
    <string name="EmptyEventsConcise">No Events</string>
    <string name="EmptyTasksConcise">No Tasks</string>
    <string name="Enable">Enable</string>
    <string name="EnableNotificationsMessage">Please enable notifications using the Settings app</string>
    <string name="EnableNotificationsTitle">Enable Notifications</string>
    <string name="EndLabel">Ends</string>
    <string name="EnglishAssignmentEvent">English Assignment</string>
    <string name="EnglishEvent">English</string>
    <string name="ErrorGeneric">Error</string>
    <string name="EveryDay">Every day</string>
    <string name="EveryWeekday">Every weekday</string>
    <string name="ExportAs">Export as</string>
    <string name="ExportFeature">Export Timetable</string>
    <string name="ExportTimetable">Export Timetable</string>
    <string name="FastTimeSelectionDetailText">Turn this off to enter precise times, such as %s</string>
    <string name="FastTimeSelectionTitle">Fast Time Selection</string>
    <string name="Features">Features</string>
    <string name="FeaturesTitle">Features</string>
    <string name="General">General</string>
    <string name="GeographyEvent">Geography</string>
    <string name="GetMacApp">Get Mac App</string>
    <string name="GlassTap">Glass Tap</string>
    <string name="GrayColor">Gray</string>
    <string name="GreenColor">Green</string>
    <string name="Image">Image</string>
    <string name="ImportMethodExplanation">Would you like this file to replace your current timetable, or merge with existing entries?</string>
    <string name="ImportTimetable">Import Timetable File</string>
    <string name="Info">Info</string>
    <string name="InfoTitleMessage">Info</string>
    <string name="KeepEditing">Keep editing</string>
    <string name="LargeDisplayWidgetDescription">This widget displays the current or upcoming event.</string>
    <string name="LargeDisplayWidgetTitle">Large Display</string>
    <string name="Later">Later</string>
    <string name="LightColorVariation">Light %s</string>
    <string name="Loading">Loading...</string>
    <string name="MacAppShareText">Class Timetable for macOS</string>
    <string name="ManageCategories">Manage Categories</string>
    <string name="MarkAsCompleted">Mark as Completed</string>
    <string name="MathEvent">Math</string>
    <string name="MathHomeworkEvent">Math Homework</string>
    <string name="MediumColorVariation">Medium %s</string>
    <string name="MenuDisclosureIndication">...</string>
    <string name="MergeTimetable">Merge Timetable</string>
    <string name="MidnightValidationError">"You've set an end time that finishes after midnight. Please ensure this is correct."</string>
    <string name="Minutes">minutes</string>
    <string name="MinutesBefore">Minutes Before</string>
    <string name="MissingTitleError">Please enter a title</string>
    <string name="More">More</string>
    <string name="MoreSettings">More Settings</string>
    <string name="MoreTitle">More</string>
    <string name="MoreWidgetsFeature">More Widgets</string>
    <string name="MultipleValues">Multiple values</string>
    <string name="MultipleWeeks">Multiple weeks</string>
    <string name="MusicEvent">Music</string>
    <string name="NewOccurrence">New Occurrence</string>
    <string name="NextEventConcise">Next</string>
    <string name="NoAds">Never See Ads</string>
    <string name="NoCategory">No Category</string>
    <string name="None">None</string>
    <string name="NotificationSoundSelectionTitle">Sound</string>
    <string name="NotificationTime">Notification Time</string>
    <string name="NotificationWidgetFeature">Improved Notification Widget</string>
    <string name="Notifications">Notifications</string>
    <string name="NotificationsTitle">Notifications</string>
    <string name="NowEventConcise">Now</string>
    <string name="NumberOfWeeks">Number of Weeks</string>
    <string name="NumberOfWeeksDescription">Your timetable will repeat after this many weeks</string>
    <string name="OKDismiss">OK</string>
    <string name="OKDismissError">OK</string>
    <string name="Occurrences">Occurrences</string>
    <string name="OffState">Off</string>
    <string name="OnOffLabel">On/Off</string>
    <string name="OnState">On</string>
    <string name="OnTheDay">On the day</string>
    <string name="OneDayBefore">One day before</string>
    <string name="OneHourBefore">One hour before</string>
    <string name="OneTimePurchase">One time purchase</string>
    <string name="OneWeek">One week</string>
    <string name="OneWeekBefore">One week before</string>
    <string name="OpenLink">Open Link</string>
    <string name="OrangeColor">Orange</string>
    <string name="Overdue">Overdue</string>
    <string name="PinkColor">Pink</string>
    <string name="PoppyChime">Poppy Chime</string>
    <string name="Preferences">Preferences</string>
    <string name="ProFeatures">Pro Features</string>
    <string name="ProUpgradeRestoreSuccess">Pro Upgrade Restored</string>
    <string name="Processing">Processing...</string>
    <string name="PurchaseRestoreSuccess">Purchases restored successfully</string>
    <string name="Purchased">Purchased</string>
    <string name="PurpleColor">Purple</string>
    <string name="RateApp">Rate on App Store</string>
    <string name="RateThisApp">Rate this App</string>
    <string name="RedColor">Red</string>
    <string name="RemindMe">Remind Me</string>
    <string name="Reminder">Reminder</string>
    <string name="RemoveAds">Remove Ads</string>
    <string name="RemoveTaskCategory">Remove Category</string>
    <string name="ReplaceTimetable">Replace Timetable</string>
    <string name="Reset">Reset</string>
    <string name="ResetConfirmationTitle">Reset Successful</string>
    <string name="ResetTimetable">Reset Timetable</string>
    <string name="Restore">Restore</string>
    <string name="RestoreInProgress">Restoring...</string>
    <string name="RestoreProUpgrade">Restore Pro Upgrade</string>
    <string name="RestorePurchases">Restore Purchases</string>
    <string name="Result">Result</string>
    <string name="Retry">Retry</string>
    <string name="RotateForWeek">Rotate for Week</string>
    <string name="RotateForWeekDescription">Rotate to see a week display. iPhone only.</string>
    <string name="SaveConcise">Save</string>
    <string name="ScienceEvent">Science</string>
    <string name="SeeAllFeatures">See all Features</string>
    <string name="SelectColor">Select Color</string>
    <string name="SelectTaskCategory">Select Category</string>
    <string name="SelectTitle">Select</string>
    <string name="Settings">Settings</string>
    <string name="ShareApp">Share App</string>
    <string name="ShareText">Check out this great app!</string>
    <string name="SharingCategoryName">Sharing</string>
    <string name="ShortcutPhraseDescription">By adding Siri Shortcuts, you can use your voice to ask Siri about your timetable.</string>
    <string name="ShortcutPhraseTitle">Siri Shortcut Phrases</string>
    <string name="ShortcutsTitle">Shortcuts</string>
    <string name="ShowMore">Show More…</string>
    <string name="ShowMoreWithCount">%s More...</string>
    <string name="SiriSetupTitle">Siri Setup</string>
    <string name="SonarPing">Sonar Ping</string>
    <string name="StartLabel">Starts</string>
    <string name="Suggestions">Suggestions</string>
    <string name="Support">Support Development</string>
    <string name="SyncNow">Sync Now</string>
    <string name="SyncUnsuccessful">The sync failed to complete.</string>
    <string name="Syncing">Syncing...</string>
    <string name="TaskCategory">Category</string>
    <string name="TaskReminders">Task Reminders</string>
    <string name="TaskWidgetDescription">This widget show your tasks, and can be configured to filter by task category.</string>
    <string name="TaskWidgetTitle">Tasks</string>
    <string name="TaskWidgetsFeature">Task Widgets</string>
    <string name="Tasks">Tasks</string>
    <string name="TasksShortcutPhrase">What tasks do I have?</string>
    <string name="TasksShortcutTitle">Show Tasks</string>
    <string name="ThankYouTitle">Thank You</string>
    <string name="ThanksAndSupportMessage">Your support allows continued development. Please take a moment to help improve Class Timetable.</string>
    <string name="ThatsIt">"That's It"</string>
    <string name="TheNightBefore">The night before</string>
    <string name="Time">Time</string>
    <string name="TimetableCategoryName">Timetable</string>
    <string name="UpgradeFullTitle">Upgrade to Pro</string>
    <string name="UpgradePaywallDescription">Sorry, this is an upgrade only feature. Upgrade now for less than the price of a coffee.</string>
    <string name="UpgradePaywallTitle">Upgrade to Access</string>
    <string name="WeekendActive">Weekend Days</string>
    <string name="preference_key_add_to_home_screen">add_to_home_screen</string>
    <string name="preference_key_enable_notifications">enable_notifications</string>
    <string name="preference_key_enable_weekend">enable_weekend_days</string>
    <string name="preference_key_export">export_timetable</string>
    <string name="preference_key_import">import_timetable</string>
    <string name="preference_key_is_pro_version_enabled">is_pro_version_enabled</string>
    <string name="preference_key_number_of_weeks">number_of_weeks</string>
    <string name="preference_key_rate_this_app">rate_this_app</string>
    <string name="preference_key_reset_timetable">reset_timetable</string>
    <string name="preference_key_restore_purchases">restore_purchases</string>
    <string name="preference_key_website_link">website_link</string>
</resources>